Metabolomics page testing

--- a/Modular/partials/metabolomics.html
+++ b/Modular/partials/metabolomics.html
@@ -12,11 +12,11 @@
                 <label>Charge </label><br>
                 <div class="form-inline form-control">
                     <label class="radio-inline">
-                        <input type="radio"  ng-value="true" ng-model="charge" ng-checked="charge">
+                        <input id='pos-radio' type="radio"  ng-value="true" ng-model="charge" ng-checked="charge">
                         Positive
                     </label>
                     <label class="radio-inline">
-                        <input type="radio" ng-value="false" ng-model="charge">
+                        <input id='neg-radio' type="radio" ng-value="false" ng-model="charge">
                         Negative
                     </label>
                 </div><br>
