updated Metabolomics to fix searching displaying when no results are returned

--- a/Modular/partials/metaboliteslist.html
+++ b/Modular/partials/metaboliteslist.html
@@ -3,8 +3,8 @@
 </div>
 <div class="col-sm-2">
     <br>
-    <h3 ng-show="!totalItems">Searching...</h3>
-    <button id="met-download" ng-show="totalItems" class="btn btn-primary pull-right" ng-click="downloadResults()">Download Results</button>
+    <h3 ng-show="!(items+1)">Searching...</h3>
+    <button id="met-download" ng-show="items" class="btn btn-primary pull-right" ng-click="downloadResults()">Download Results</button>
 </div>
 <div class="col-sm-6">
     <pagination class="pull-right" total-items="items" page="currentPage" max-size="maxSize" class="pagination-sm"
