--- a/Modular/partials/metaboliteslist.html
+++ b/Modular/partials/metaboliteslist.html
@@ -4,7 +4,8 @@
 <div class="col-sm-2">
     <br>
     <h3 ng-show="!(items+1)">Searching...</h3>
-    <button id="met-download" ng-show="items" class="btn btn-primary pull-right" ng-click="downloadResults()">Download Results</button>
+    <button id="met-download" ng-show="items" class="btn btn-primary pull-right" ng-click="downloadResults()"
+            analytics-on="click" analytics-event="MetabolomicsDownload">Download Results</button>
 </div>
 <div class="col-sm-6">
     <pagination class="pull-right" total-items="items" page="currentPage" max-size="maxSize" class="pagination-sm"
@@ -26,32 +27,32 @@
                                  class="glyphicon glyphicon-question-sign"></span></th>
           </tr>
         <tr id="filters">
-            <th><input type="text" class="form-control" style='width: 100px' placeholder="Search" ng-model="searchMZ"></th>
-            <th><input type="text" class="form-control" style='width: 90px' placeholder="Search" ng-model="searchAdduct"></th>
-            <th><input type="text" class="form-control" style='width: 90px' placeholder="Search" ng-model="searchFormula"></th>
-            <th><input type="text" class="form-control" placeholder="Search" ng-model="searchCompound"></th>
-            <th><input type="text" class="form-control" style='width: 90px' placeholder="Search" ng-model="searchMINE"></th>
-            <th><button class="btn btn-block btn-primary" ng-click="sortColumn='logP'; sortInvert=!sortInvert">Sort by</button></th>
-            <th><button class="btn btn-block btn-primary" ng-click="sortColumn='minKovatsRI'; sortInvert=!sortInvert">Sort by</button></th>
-            <th><button id="sort-NP" class="btn btn-block btn-primary" ng-click="sortColumn='NP_likeness'; sortInvert=!sortInvert">Sort by</button></th>
+            <th><input type="text" class="form-control" style='width: 100px' placeholder="Search" ng-model="searchMZ" analytics-on></th>
+            <th><input type="text" class="form-control" style='width: 90px' placeholder="Search" ng-model="searchAdduct" analytics-on></th>
+            <th><input type="text" class="form-control" style='width: 90px' placeholder="Search" ng-model="searchFormula" analytics-on></th>
+            <th><input type="text" class="form-control" placeholder="Search" ng-model="searchCompound" analytics-on></th>
+            <th><input type="text" class="form-control" style='width: 90px' placeholder="Search" ng-model="searchMINE" analytics-on></th>
+            <th><button class="btn btn-block btn-primary" ng-click="sortColumn='logP'; sortInvert=!sortInvert" analytics-on>Sort by</button></th>
+            <th><button class="btn btn-block btn-primary" ng-click="sortColumn='minKovatsRI'; sortInvert=!sortInvert" analytics-on>Sort by</button></th>
+            <th><button id="sort-NP" class="btn btn-block btn-primary" ng-click="sortColumn='NP_likeness'; sortInvert=!sortInvert" analytics-on>Sort by</button></th>
         </tr>
         </thead>
             <tr ng-repeat="f in displayData" style="color:{{colour(f.native_hit,f.steps_from_source)}}; cursor:pointer" ui-sref="acompound.overview({id:f.MINE_id})">
-              <td style="vertical-align:middle">{{f.peak_name}}</td>
-              <td style="vertical-align:middle">{{f.adduct}}</td>
-              <td style="vertical-align:middle">{{f.Formula}}</td>
-              <td style="text-align: center">
-              <ui style="list-style: none;">
-                <li>
-                  <img id="met-img" class="logo" ng-src="{{img_src+f._id}}.svg" width="100" alt="No image avalable">
-                </li>
-                <li  >{{f.Names[0]}}</li>
-            </ui>
-              </td>
-              <td style="vertical-align:middle">{{f.MINE_id}}</td>
-              <td style="vertical-align: middle">{{f.logP}}</td>
-              <td style="vertical-align: middle">{{f.minKovatsRI}}-{{f.maxKovatsRI}}</td>
-              <td style="vertical-align: middle">{{f.NP_likeness}}</td>
+                <td style="vertical-align:middle">{{f.peak_name}}</td>
+                <td style="vertical-align:middle">{{f.adduct}}</td>
+                <td style="vertical-align:middle">{{f.Formula}}</td>
+                <td style="text-align: center">
+                    <ui style="list-style: none;">
+                        <li>
+                        <img id="met-img" class="logo" ng-src="{{img_src+f._id}}.svg" width="100" alt="No image avalable">
+                        </li>
+                        <li>{{f.Names[0]}}</li>
+                    </ui>
+                </td>
+                <td style="vertical-align:middle">{{f.MINE_id}}</td>
+                <td style="vertical-align: middle">{{f.logP}}</td>
+                <td style="vertical-align: middle">{{f.minKovatsRI}}-{{f.maxKovatsRI}}</td>
+                <td style="vertical-align: middle">{{f.NP_likeness}}</td>
             </tr>
     </table>
     <pagination class="pull-right" total-items="items" page="currentPage" max-size="maxSize" class="pagination-sm"
