--- a/Modular/Beta/partials/top30.html
+++ b/Modular/Beta/partials/top30.html
@@ -33,11 +33,11 @@
 				{{reaction.Type}}
             </td>
 			<!-- Rxn Schematic -->
-			<td style="width: 60%">
+			<td style="width: 60%; vertical-align: middle;">
 				<reaction-diagram>
 			</td>
 			<!-- References -->
-			<td style="vertical-align:middle">
+			<td style="width: 20%;vertical-align:middle">
 				<ul ng-repeat="ref in reaction.References track by $index">
 					<li>
 						<a ng-if="parseInt(ref)" ng-href="http://www.ncbi.nlm.nih.gov/pubmed/{{ref}}">{{ref}}</a>
