--- a/Modular/partials/FAQ.html
+++ b/Modular/partials/FAQ.html
@@ -23,9 +23,11 @@
 
     <h4>How can I integrate your database into my tool/pipeline?</h4>
     <div class="well">
-        We offer client APIs in JavaScript, Python and Perl which cover all the functionality of this website. Please
-        <a href="https://docs.google.com/forms/d/1n-EV-nfRr-Ck6CW5MSqKcVjepAfh5ymERu7Zu9bUjqk/viewform?usp=send_form"> contact us</a>
-        to request the most recent version.
+        We offer API clients in JavaScript, Python and Perl which cover all the functionality of this website. These
+        clients are available at <a href="https://github.com/JamesJeffryes/MINE-API"> GitHub.</a> You may also
+        <a href="http://lincolnpark.chem-eng.northwestern.edu/release/"> download SDF files </a> of the generated
+        metabolites in the database. Due to licencing restrictions, we are not able to redistribute the original
+        database compounds (i.e. KEGG COMPOUND) but these compounds are available from the original sources.
     </div>
 
     <h4>I found an error/ I'm skeptical about the validity of a compound</h4>
