--- a/Modular/Beta/partials/top30.html
+++ b/Modular/Beta/partials/top30.html
@@ -1,53 +1,8 @@
 <div class="jumbotron">
-  <h1>The top 30 Damage Prone Metabolites</h1>
-  <p>Here we explain the list </p>
+    <h1>The top 30 Damage Prone Metabolites</h1>
+    <p>Here we explain the list</p>
+    {{meh}}
+	<a ui-sref="top30.s1"><h3>Table S1: Chemical Damage Reactions from Literature</h3></a>
+    <a ui-sref="top30.s2"><h3>Table S2: List of Chemical Damage Operators</h3></a>
 </div>
-<div class="col-lg-3">
-    <br><input class=form-control type="text" ng-model="searchComp" placeholder="Filter by Metabolite">
-</div>
-<div class="col-lg-3">
-    <br><input class=form-control type="text" ng-model="searchType" placeholder="Filter by Reaction Type">
-</div>
-<button ng-click="staticPage()">Download</button>
-<pagination class="pull-right" total-items="items" page="currentPage" max-size="maxSize" class="pagination-sm"
-            items-per-page="numPerPage"  style="{cursor: pointer; vertical-align: top}"></pagination>
-<br>
-<div id=rxn-tbl>
-<table class="table table-striped table-hover">
-	<thead>
-		<tr>
-			<th>Compound</th>
-			<th>Reaction Type</th>
-			<th>Reaction Diagram</th>
-			<th>References</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr ng-repeat="reaction in filteredData">
-			<!-- Compound -->
-			<td id="{{reaction._id}}" style="vertical-align:middle">
-				{{reaction.Compound}}
-            </td>
-			<!-- Rxn Type -->
-			<td style="vertical-align:middle">
-				{{reaction.Type}}
-            </td>
-			<!-- Rxn Schematic -->
-			<td style="width: 60%; vertical-align: middle;">
-				<reaction-diagram>
-			</td>
-			<!-- References -->
-			<td style="width: 20%;vertical-align:middle">
-				<ul ng-repeat="ref in reaction.References track by $index">
-					<li>
-						<a ng-if="parseInt(ref)" ng-href="http://www.ncbi.nlm.nih.gov/pubmed/{{ref}}">{{ref}}</a>
-						<span ng-if="!parseInt(ref)">{{ref}}</span>
-					</li>
-				</ul>
-            </td>
-		</tr>
-	</tbody>
-</table>
-</div>
-<pagination class="pull-right" total-items="items" page="currentPage" max-size="maxSize" class="pagination-sm"
-			items-per-page="numPerPage"  style="cursor: pointer;"></pagination>
+<div ui-view></div>
