fixing some of the supplement tables

--- a/Modular/Beta/partials/S2.html
+++ b/Modular/Beta/partials/S2.html
@@ -32,13 +32,11 @@
             </td>
 			<!-- Basis -->
 			<td style="vertical-align:middle">
-				<div ng-repeat="reaction in op.Basis">
-					<a ui-sref="top30.s1({id:reaction})">
+				<a ui-sref="top30.s1({id:op.Basis})">
 						<button type="button" class="btn btn-default btn-lg">
 							<span class="glyphicon glyphicon-new-window"></span>
 						</button>
-					</a>
-				</div>
+				</a>
             </td>
 		</tr>
 	</tbody>
