--- a/Modular/Beta/custom.css
+++ b/Modular/Beta/custom.css
@@ -6,6 +6,7 @@ body .modal-xl {
 }
 
 body .reactant {
+    display: -webkit-inline-flex;
     display: inline-flex;
     align-items: center;
     padding: 0 5px
