--- a/Modular/Beta/partials/top30.html
+++ b/Modular/Beta/partials/top30.html
@@ -1,7 +1,6 @@
 <div class="jumbotron">
-    <h1>The top 30 Damage Prone Metabolites</h1>
+    <h1>The Top 30 Damage Prone Metabolites</h1>
     <p>Here we explain the list</p>
-    {{meh}}
 	<a ui-sref="top30.s1"><h3>Table S1: Chemical Damage Reactions from Literature</h3></a>
     <a ui-sref="top30.s2"><h3>Table S2: List of Chemical Damage Operators</h3></a>
 </div>
