--- a/Modular/Beta/partials/S1.html
+++ b/Modular/Beta/partials/S1.html
@@ -1,14 +1,16 @@
 <h2>Table S1: Chemical Damage Reactions from Literature</h2>
-<div class="col-lg-3">
-    <br><input class=form-control type="text" ng-model="searchComp" placeholder="Filter by Metabolite">
+<div>
+    <div class="col-lg-3">
+        <br><input class=form-control type="text" ng-model="searchComp" placeholder="Filter by Metabolite">
+    </div>
+    <div class="col-lg-3">
+        <br><input class=form-control type="text" ng-model="searchType" placeholder="Filter by Reaction Type">
+    </div>
+    <pagination class="pull-right" total-items="items" page="currentPage" max-size="maxSize" class="pagination-sm"
+                items-per-page="numPerPage"  style="{cursor: pointer; vertical-align: top}"></pagination>
 </div>
-<div class="col-lg-3">
-    <br><input class=form-control type="text" ng-model="searchType" placeholder="Filter by Reaction Type">
-</div>
-<pagination class="pull-right" total-items="items" page="currentPage" max-size="maxSize" class="pagination-sm"
-            items-per-page="numPerPage"  style="{cursor: pointer; vertical-align: top}"></pagination>
-<br>
-<div id=rxn-tbl>
+<br><br><br>
+<div>
 <table class="table table-striped table-hover">
 	<thead>
 		<tr>
@@ -47,3 +49,4 @@
 </div>
 <pagination class="pull-right" total-items="items" page="currentPage" max-size="maxSize" class="pagination-sm"
 			items-per-page="numPerPage"  style="cursor: pointer;"></pagination>
+
