--- a/Modular/Beta/partials/S2.html
+++ b/Modular/Beta/partials/S2.html
@@ -23,7 +23,7 @@
             </td>
 			<!-- Schematic -->
 			<td style="width: 60%">
-				<img ng-src="{{img_src}}op_images/{{+op._id}}.svg" width="500">
+				<img ng-src="{{img_src}}op_images/{{+op._id}}.png" width="500">
 			</td>
 			<!-- # of reactions -->
 			<td style="vertical-align:middle">
