--- a/Modular/Beta/partials/S1.html
+++ b/Modular/Beta/partials/S1.html
@@ -1,4 +1,18 @@
 <h2>Table S1: Chemical Damage Reactions from Literature</h2>
+<div class="alert alert-info alert-dismissible" role="alert">
+    <button type="button btn-lg" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    <strong> Notes on the table: </strong>
+    <ol>
+        <li>Where the oxidant in a reaction is not specified in the literature, it is taken to be hydrogen peroxide.</li>
+        <li>Reactions marked with an asterisk have been inferred from reactions of closely related compounds.</li>
+        <li>To see larger versions of structures, over the cursor over the small structure image</li>
+        <li>To see the page with the SMILES formula of a compound (and other information when available) click on the
+            small structure image. Information below the SMILES formula can include the number of enzymes that use the
+            compound (if any) and the number of metabolic pathways in which it participates (if any). If the compound is
+            present in the MINE databases, the ‘Product of’ and ‘Reactant in’ tabs will list reactions in which the
+            compound is predicted to participate.</li>
+    </ol>
+</div>
 <div>
     <div class="col-lg-3">
         <br><input class=form-control type="text" ng-model="searchComp" placeholder="Filter by Metabolite">
@@ -17,6 +31,8 @@
 			<th>Compound</th>
 			<th>Reaction Type</th>
 			<th>Reaction Diagram</th>
+            <th></th>
+            <th></th>
 			<th>References</th>
 		</tr>
 	</thead>
@@ -31,24 +47,27 @@
 				{{reaction.Type}}
             </td>
 			<!-- Rxn Schematic -->
-			<td style="width: 60%; vertical-align: middle;">
-				<div class ="reactant"></div>
-                <div class ="reactant" id="rxn-img" ng-repeat="comp in reaction.Reactants">
+			<td style="width: 25%; vertical-align: middle; text-align: right">
+                <div class="reactant" id="rxn-img" ng-repeat="comp in reaction.Reactants">
 					<span style="font-size:16px" ng-if="comp[0]-1">
 						{{comp[0]}}
 					</span>
-					<div>
+					<a  ui-sref="acompound.overview({id:comp[1]})">
 					<img ng-mouseover="getCompoundName($event, comp[1])" ng-src="{{img_src+comp[1]}}.png" width="100">
-					</div>
+					</a>
 				</div>
+            </td>
+            <td style="vertical-align: middle;">
 				<span style="font-size:40px"> &#8594</span>
+            </td>
+            <td style="width: 25%; vertical-align: middle;">
 				<div class ="reactant" ng-repeat="comp in reaction.Products">
 					<div style="font-size:16px" ng-if= "comp[0]-1">
 						{{comp[0]}}
 					</div>
-					<div>
+					<a  ui-sref="acompound.overview({id:comp[1]})">
 					<img ng-mouseover="getCompoundName($event, comp[1])" ng-src="{{img_src+comp[1]}}.png" width="100">
-					</div>
+					</a>
 				</div>
 			</td>
 			<!-- References -->
