--- a/Modular/Beta/partials/S2.html
+++ b/Modular/Beta/partials/S2.html
@@ -1,4 +1,25 @@
-<h2>Chemical Damage Reactions Rules</h2>
+<h2>Table S2: Chemical Damage Reaction Rules</h2>
+<div class="alert alert-info alert-dismissible" role="alert">
+    <button type="button btn-lg" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+    <strong> Notes on the table: </strong>
+    <ol>
+        <li>Clicking on the button in the ‘Basis’ column links to the reaction in Table S1 on which the Reaction Rule is based.</li>
+        <li>The subscript near atoms describe the context of the atom. The letters indicate the following:
+            <ul>
+                <li>W = Wildcard (Any context)</li>
+                <li>0 = No ring structure (default)</li>
+                <li>B = benzene (six member aromatic ring with any functional groups coming off)</li>
+                <li>N = nonbenzene ring (any ring that's not a six-member aromatic ring)</li>
+                <li>6 = any six member ring</li>
+                <li>5 = any five member ring</li>
+                <li>4 = any four member ring</li>
+                <li>L = Large ring (any ring larger than 6 atoms)</li>
+                <li>H = any heteroaromatic ring</li>
+                <li>F = any fused ring</li>
+            </ul>
+            The numbers indicate the number of that type of ring the atom participates in with 9 being any number including 0.</li>
+    </ol>
+</div>
 <div class="col-lg-3">
     <br><input class=form-control type="text" ng-model="searchName" placeholder="Filter by Name">
 </div>
