--- a/Modular/Beta/partials/S1.html
+++ b/Modular/Beta/partials/S1.html
@@ -5,7 +5,7 @@
     <ol>
         <li>Where the oxidant in a reaction is not specified in the literature, it is taken to be hydrogen peroxide.</li>
         <li>Reactions marked with an asterisk have been inferred from reactions of closely related compounds.</li>
-        <li>To see larger versions of structures, over the cursor over the small structure image</li>
+        <li>To see larger versions of structures, hover the cursor over the small structure image</li>
         <li>To see the page with the SMILES formula of a compound (and other information when available) click on the
             small structure image. Information below the SMILES formula can include the number of enzymes that use the
             compound (if any) and the number of metabolic pathways in which it participates (if any). If the compound is
