--- a/Modular/custom.css
+++ b/Modular/custom.css
@@ -4,10 +4,16 @@ body .modal-xl {
     /* must be half of the width, minus scrollbar on the left (30px) */
     /*margin-left: -470px;*/
 }
+
 body .reactant {
+    display: -webkit-inline-flex;
     display: inline-flex;
     align-items: center;
     padding: 0 5px
+}
+
+body .popover{
+    max-width: 100%; /* Max Width of the popover (depending on the container!) */
 }
 
 @media (min-width:1280px){.container{width:1280px}}
