adding in provisional publication information

--- a/Modular/partials/FAQ.html
+++ b/Modular/partials/FAQ.html
@@ -38,9 +38,12 @@
     </div>
 
     <h4>Are there any restrictions on the use of this website and APIs?</h4>
-    <div class="well">
+    < class="well">
         MINEs are provided as a freely available resource. There are no licensing restrictions for non-commercial use but
-        users are requested to cite: "future publication". Commercial users must obtain a license from Pathway Solutions Inc.
+        users are requested to cite:<strong> James G. Jeffryes, Ricardo L. Colastani, Mona Elbadawi-Sidhu, Tobias Kind,
+        Thomas D. Niehaus, Linda J. Broadbelt, Andrew D. Hanson, Oliver Fiehn, Keith E. J. Tyo, Christopher S. Henry,
+        “MINEs: Open access databases of computationally predicted enzyme promiscuity products for untargeted
+        metabolomics” J. Cheminformatics In Press.</strong> Commercial users must obtain a license from Pathway Solutions Inc.
         (www.pathway.jp) and explicit permission from the authors.
     </div>
 </div>
