--- a/Modular/partials/FAQ.html
+++ b/Modular/partials/FAQ.html
@@ -38,7 +38,7 @@
     </div>
 
     <h4>Are there any restrictions on the use of this website and APIs?</h4>
-    < class="well">
+    <div class="well">
         MINEs are provided as a freely available resource. There are no licensing restrictions for non-commercial use but
         users are requested to cite:<strong> James G. Jeffryes, Ricardo L. Colastani, Mona Elbadawi-Sidhu, Tobias Kind,
         Thomas D. Niehaus, Linda J. Broadbelt, Andrew D. Hanson, Oliver Fiehn, Keith E. J. Tyo, Christopher S. Henry,
