categories for events

--- a/Modular/partials/FAQ.html
+++ b/Modular/partials/FAQ.html
@@ -5,8 +5,8 @@
     <div class="well">
         <p>There are many ways you can use this website but we have developed a few tours that show the basics.</p>
         <ul>
-            <li><a style="font-size: 12pt" ng-click="startGeneralTour()" analytics-on>General Website Tour</a></li>
-            <li><a style="font-size: 12pt" ng-click="startMetabolomicsTour()" analytics-on>Metabolomics Tour</a></li>
+            <li><a style="font-size: 12pt" ng-click="startGeneralTour()" analytics-on analytics-category="Tour">General Website Tour</a></li>
+            <li><a style="font-size: 12pt" ng-click="startMetabolomicsTour()" analytics-on analytics-category="Tour">Metabolomics Tour</a></li>
         </ul>
     </div>
     <h4>How do you generate <i>in silico</i> metabolites?</h4>
@@ -24,8 +24,8 @@
     <h4>How can I integrate your database into my tool/pipeline?</h4>
     <div class="well">
         We offer API clients in JavaScript, Python and Perl which cover all the functionality of this website. These
-        clients are available at <a href="https://github.com/JamesJeffryes/MINE-API" analytics-on> GitHub.</a> You may also
-        <a href="http://lincolnpark.chem-eng.northwestern.edu/release/" analytics-on> download SDF files </a> of the generated
+        clients are available at <a href="https://github.com/JamesJeffryes/MINE-API" analytics-on analytics-category="Link Out"> GitHub.</a> You may also
+        <a href="http://lincolnpark.chem-eng.northwestern.edu/release/" analytics-on analytics-category="Link Out"> download SDF files </a> of the generated
         metabolites in the database. Due to licencing restrictions, we are not able to redistribute the original
         database compounds (i.e. KEGG COMPOUND) but these compounds are available from the original sources.
     </div>
