--- a/Modular/partials/structureSearch.html
+++ b/Modular/partials/structureSearch.html
@@ -47,7 +47,8 @@
                         <option value="1000">1000</option>
                     </select>
                 </div>
-                <button id = "btn-molExport" class="btn  btn-primary" ng-click="find()"><span class="glyphicon glyphicon-search"></span> Search</button>
+                <button id = "btn-molExport" class="btn  btn-primary" ng-click="find()" analytics-on="click"
+                        analytics-category="Search" analytics-event="Structure"><span class="glyphicon glyphicon-search"></span> Search</button>
                 </div>
             </fieldset>
             <a class="pull-right" href="http://www.chemaxon.com"><img border="0" src="http://www.chemaxon.com/images/powered_100px.gif" alt="ChemAxon" ></a>
