updating beta branch to match changes to production site/ selectize replaces prior selection methods

--- a/Modular/Beta/partials/home.html
+++ b/Modular/Beta/partials/home.html
@@ -16,7 +16,8 @@
             </div>
         </div>
         <div class="col-md-4">
-        <div class="panel panel-primary" ng-click=startGeneralTour() style="cursor: pointer;">
+        <div class="panel panel-primary" ng-click=startGeneralTour() style="cursor: pointer;" analytics-on="click"
+             analytics-category="Tour" analytics-event="General Website Tour">
             <div class="panel-heading"><span class="panel-title" style="font-size: 15pt">General Website Tour</span></div>
             <div class="panel-body">
                 <p style="font-size: 13pt">
@@ -27,7 +28,8 @@
         </div>
         </div>
         <div class="col-md-4">
-            <div class="panel panel-primary" ng-click=startMetabolomicsTour() style="cursor: pointer;">
+            <div class="panel panel-primary" ng-click=startMetabolomicsTour() style="cursor: pointer;" analytics-on="click"
+                 analytics-category="Tour" analytics-event="Metabolomics Tour">
             <div class="panel-heading"><span class="panel-title" style="font-size: 15pt">Metabolomics Tour</span></div>
             <div class="panel-body">
                 <p style="font-size: 13pt">
