--- a/Modular/Beta/partials/FAQ.html
+++ b/Modular/Beta/partials/FAQ.html
@@ -40,10 +40,13 @@
     <h4>Are there any restrictions on the use of this website and APIs?</h4>
     <div class="well">
         MINEs are provided as a freely available resource. There are no licensing restrictions for non-commercial use but
-        users are requested to cite: James G. Jeffryes, Ricardo L. Colastani, Mona Elbadawi-Sidhu, Tobias Kind,
-        Thomas D. Niehaus, Linda J. Broadbelt, Andrew D. Hanson, Oliver Fiehn, Keith E. J. Tyo, Christopher S. Henry,
-        “MINEs: Open access databases of computationally predicted enzyme promiscuity products for untargeted
-        metabolomics” <em>J. Cheminformatics</em> In Press. Commercial users must obtain a license from Pathway Solutions Inc.
-        (www.pathway.jp) and explicit permission from the authors.
+        users are requested to cite the following <a href="http://www.jcheminf.com/content/7/1/44">publication</a>:
+        <ul>
+            <li>James G. Jeffryes, Ricardo L. Colastani, Mona Elbadawi-Sidhu, Tobias Kind,
+            Thomas D. Niehaus, Linda J. Broadbelt, Andrew D. Hanson, Oliver Fiehn, Keith E. J. Tyo, Christopher S. Henry,
+            “MINEs: Open access databases of computationally predicted enzyme promiscuity products for untargeted
+            metabolomics” <em>J. Cheminformatics</em> 2015, <b>7</b>:44</li>
+        </ul>
+        Commercial users must obtain a license from Pathway Solutions Inc. (www.pathway.jp) and explicit permission from the authors.
     </div>
 </div>
