--- a/Modular/Beta/custom.css
+++ b/Modular/Beta/custom.css
@@ -17,3 +17,9 @@ body .popover{
 }
 
 @media (min-width:1280px){.container{width:1280px}}
+
+@media (min-width: 979px) {
+  ul.nav li.dropdown:hover > ul.dropdown-menu {
+    display: block;
+  }
+}
