--- a/Modular/Beta/partials/metaboliteslist.html
+++ b/Modular/Beta/partials/metaboliteslist.html
@@ -14,7 +14,8 @@
 <div class="col-lg-12">
     <table class="table table-striped table-hover" style="text-align: center">
         <thead>
-          <tr>
+        <tr>
+            <th ng-show="factory.params.scoring_function">Spectral Score</th>
             <th>M/Z</th>
             <th>Adduct</th>
             <th>Formula</th>
@@ -25,8 +26,9 @@
             <th>NP Likeness<span tooltip="NP Likeness is a quantitative measure of how similar a given compound is to known
                                           natural products. The values range from -3 (very synthetic) to 3 (very natural)."
                                  class="glyphicon glyphicon-question-sign"></span></th>
-          </tr>
+        </tr>
         <tr id="filters">
+            <th ng-show="factory.params.scoring_function"><button class="btn btn-block btn-primary" ng-click="sortColumn='Spectral_score'; sortInvert=!sortInvert" analytics-on>Sort by</button></th>
             <th><input type="text" class="form-control" style='width: 100px' placeholder="Search" ng-model="searchMZ" analytics-on></th>
             <th><input type="text" class="form-control" style='width: 90px' placeholder="Search" ng-model="searchAdduct" analytics-on></th>
             <th><input type="text" class="form-control" style='width: 90px' placeholder="Search" ng-model="searchFormula" analytics-on></th>
@@ -37,23 +39,24 @@
             <th><button id="sort-NP" class="btn btn-block btn-primary" ng-click="sortColumn='NP_likeness'; sortInvert=!sortInvert" analytics-on>Sort by</button></th>
         </tr>
         </thead>
-            <tr ng-repeat="f in displayData" style="color:{{colour(f.native_hit,f.steps_from_source)}}; cursor:pointer" ui-sref="acompound.overview({id:f.MINE_id})">
-                <td style="vertical-align:middle">{{f.peak_name}}</td>
-                <td style="vertical-align:middle">{{f.adduct}}</td>
-                <td style="vertical-align:middle">{{f.Formula}}</td>
-                <td style="text-align: center">
-                    <ui style="list-style: none;">
-                        <li>
+        <tr ng-repeat="f in displayData" style="color:{{colour(f.native_hit,f.steps_from_source)}}; cursor:pointer" ui-sref="acompound.overview({id:f.MINE_id})">
+            <td ng-show="factory.params.scoring_function" style="vertical-align: middle">{{f.Spectral_score}}</td>
+            <td style="vertical-align:middle">{{f.peak_name}}</td>
+            <td style="vertical-align:middle">{{f.adduct}}</td>
+            <td style="vertical-align:middle">{{f.Formula}}</td>
+            <td style="text-align: center">
+                <ui style="list-style: none;">
+                    <li>
                         <img id="met-img" class="logo" ng-src="{{img_src+f._id}}.svg" width="100" alt="No image avalable">
-                        </li>
-                        <li>{{f.Names[0]}}</li>
-                    </ui>
-                </td>
-                <td style="vertical-align:middle">{{f.MINE_id}}</td>
-                <td ng-show="factory.filterLogP" style="vertical-align: middle">{{f.logP}}</td>
-                <td ng-show="factory.filterKovats" style="vertical-align: middle">{{f.minKovatsRI}}-{{f.maxKovatsRI}}</td>
-                <td style="vertical-align: middle">{{f.NP_likeness}}</td>
-            </tr>
+                    </li>
+                    <li>{{f.Names[0]}}</li>
+                </ui>
+            </td>
+            <td style="vertical-align:middle">{{f.MINE_id}}</td>
+            <td ng-show="factory.filterLogP" style="vertical-align: middle">{{f.logP}}</td>
+            <td ng-show="factory.filterKovats" style="vertical-align: middle">{{f.minKovatsRI}}-{{f.maxKovatsRI}}</td>
+            <td style="vertical-align: middle">{{f.NP_likeness}}</td>
+        </tr>
     </table>
     <pagination class="pull-right" total-items="items" page="currentPage" max-size="maxSize" class="pagination-sm"
                 boundary-links="true" items-per-page="numPerPage"  style="cursor: pointer;"></pagination>
