--- a/Modular/Beta/partials/ms-adduct.html
+++ b/Modular/Beta/partials/ms-adduct.html
@@ -9,7 +9,7 @@
                     <div id="upload-file" class="input-group">
                         <input type='file' class="form-control" multiple='false' id='metFile'>
                         <span class="input-group-btn">
-                            <button type="button" class="btn btn-primary" ng-click="uploadFile()">Upload</button>
+                            <button type="button" class="btn btn-primary" ng-click="uploadFile('metFile')">Upload</button>
                         </span>
                     </div>
                 </div>
