--- a/Modular/Beta/partials/ms2-search.html
+++ b/Modular/Beta/partials/ms2-search.html
@@ -4,37 +4,21 @@
         <div class="panel-body">
             <div class="col-sm-5 ">
                 <div class="form-group">
+                    <label>Parent Ion</label>
+                    <input id="parent_ion" type="text" class="form-control">
+                    <br>
                     <label>Daughter Ions</label>
                     <textarea id="trace" ng-model="trace" class="form-control" rows="10"></textarea>
                     <div id="upload-file" class="input-group">
                         <input type='file' class="form-control" multiple='false' id='metFile'>
                         <span class="input-group-btn">
-                            <button type="button" class="btn btn-primary" ng-click="uploadFile()">Upload</button>
+                            <button type="button" class="btn btn-primary" ng-click="uploadFile('metFile')">Upload</button>
                         </span>
                     </div>
                 </div>
 
             </div>
             <div class="col-sm-3 ">
-                <label>Charge </label><br>
-                <div class="form-inline form-control">
-                    <label class="radio-inline">
-                        <input id='pos-radio' type="radio"  ng-value="true" ng-model="charge" ng-checked="charge">
-                        Positive
-                    </label>
-                    <label class="radio-inline">
-                        <input id='neg-radio' type="radio" ng-value="false" ng-model="charge">
-                        Negative
-                    </label>
-                </div><br>
-                <label>Adducts <span tooltip="Select a range of adducts with Shift+Click or select multiple individual
-                                              adducts with Control(Command)+Click" tooltip-placement="right"
-                                     class="glyphicon glyphicon-question-sign"></span></label>
-
-                <select class="form-control" id="adducts" size="10" multiple ng-model="adducts"
-                        ng-options="s for s in adduct_list"></select>
-            </div>
-            <div class="col-sm-4 ">
                 <div id="tolerance" class="form-inline">
                     <label>Tolerance </label><br>
                     <div class="form-group">
@@ -51,6 +35,39 @@
                         </div>
                     </div>
                 </div>
+                <br>
+                <label>Charge </label>
+                <div class="form-inline form-control">
+                    <label class="radio-inline">
+                        <input id='pos-radio' type="radio"  ng-value="true" ng-model="charge" ng-checked="charge">
+                        Positive
+                    </label>
+                    <label class="radio-inline">
+                        <input id='neg-radio' type="radio" ng-value="false" ng-model="charge">
+                        Negative
+                    </label>
+                </div><br>
+                <label>Adducts <span tooltip="Select a range of adducts with Shift+Click or select multiple individual
+                                              adducts with Control(Command)+Click" tooltip-placement="right"
+                                     class="glyphicon glyphicon-question-sign"></span></label>
+
+                <select class="form-control" id="adducts" size="9" multiple ng-model="adducts"
+                        ng-options="s for s in adduct_list"></select>
+            </div>
+            <div class="col-sm-4 ">
+
+                <label>Fragmentation Energy</label>
+                <select class="form-control" id="energy" ng-model="energy">
+                    <option value="0">10 V</option>
+                    <option value="1">30 V</option>
+                    <option value="2">50 V</option>
+                </select>
+                <br>
+                <label>Spectral Scoring</label>
+                <select class="form-control" id="metric" ng-model="metric">
+                    <option value="jacquard">Jacquard Index</option>
+                    <option value="dot_product">Dot Product</option>
+                </select>
                 <br>
                 <label>Filter results by logP <input type="checkbox" ng-model="filterLogP" ng-checked="filterLogP"></label>
                 <div range-slider min="-35" max="35" decimal-places="1" model-min="logP[0]" model-max="logP[1]" disabled="!filterLogP"></div>
