--- a/Modular/Beta/partials/metaboliteslist.html
+++ b/Modular/Beta/partials/metaboliteslist.html
@@ -15,7 +15,7 @@
     <table class="table table-striped table-hover" style="text-align: center">
         <thead>
         <tr>
-            <th ng-show="factory.params.scoring_function">Spectral Score</th>
+            <th ng-show="factory.msmsIons">Spectral Score</th>
             <th>M/Z</th>
             <th>Adduct</th>
             <th>Formula</th>
@@ -28,7 +28,7 @@
                                  class="glyphicon glyphicon-question-sign"></span></th>
         </tr>
         <tr id="filters">
-            <th ng-show="factory.params.scoring_function"><button class="btn btn-block btn-primary" ng-click="sortColumn='Spectral_score'; sortInvert=!sortInvert" analytics-on>Sort by</button></th>
+            <th ng-show="factory.msmsIons"><button class="btn btn-block btn-primary" ng-click="sortColumn='Spectral_score'; sortInvert=!sortInvert" analytics-on>Sort by</button></th>
             <th><input type="text" class="form-control" style='width: 100px' placeholder="Search" ng-model="searchMZ" analytics-on></th>
             <th><input type="text" class="form-control" style='width: 90px' placeholder="Search" ng-model="searchAdduct" analytics-on></th>
             <th><input type="text" class="form-control" style='width: 90px' placeholder="Search" ng-model="searchFormula" analytics-on></th>
@@ -40,7 +40,7 @@
         </tr>
         </thead>
         <tr ng-repeat="f in displayData" style="color:{{colour(f.native_hit,f.steps_from_source)}}; cursor:pointer" ui-sref="acompound.overview({id:f.MINE_id})">
-            <td ng-show="factory.params.scoring_function" style="vertical-align: middle">{{f.Spectral_score}}</td>
+            <td ng-show="factory.msmsIons" style="vertical-align: middle">{{f.Spectral_score}}</td>
             <td style="vertical-align:middle">{{f.peak_name}}</td>
             <td style="vertical-align:middle">{{f.adduct}}</td>
             <td style="vertical-align:middle">{{f.Formula}}</td>
