correcting the spelling of jaccard

--- a/Modular/Beta/partials/ms2-search.html
+++ b/Modular/Beta/partials/ms2-search.html
@@ -65,7 +65,7 @@
                 <br>
                 <label>Spectral Scoring</label>
                 <select class="form-control" id="metric" ng-model="metric">
-                    <option value="jacquard">Jacquard Index</option>
+                    <option value="jaccard">Jaccard Index</option>
                     <option value="dot_product">Dot Product</option>
                 </select>
                 <br>
