--- a/Modular/Beta/partials/S2.html
+++ b/Modular/Beta/partials/S2.html
@@ -37,14 +37,14 @@
 		</tr>
 	</thead>
 	<tbody>
-		<tr ng-repeat="op in paginated track by $index">
+		<tr ng-repeat="op in paginated track by op._id">
 			<!-- Name -->
 			<td style="vertical-align:middle">
-				<a  ui-sref="operator({id:op._id})">{{op._id}}</a>
+				<a id="{{op._id}}" ui-sref="operator({id:op._id})">{{op._id}}</a>
             </td>
 			<!-- Schematic -->
 			<td style="width: 60%">
-				<img ng-src="{{img_src}}op_images/{{+op._id}}.png" width="500">
+				<img ng-src="{{img_src}}op_images/{{op._id}}.png" width="500">
 			</td>
 			<!-- # of reactions -->
 			<td style="vertical-align:middle">
