--- a/Modular/partials/S2.html
+++ b/Modular/partials/S2.html
@@ -3,7 +3,8 @@
     <button type="button btn-lg" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
     <strong> Notes on the table: </strong>
     <ol>
-        <li>Clicking on the button in the ‘Basis’ column links to the reaction in Table S1 on which the Reaction Rule is based.</li>
+        <li>This table is best viewed with a Chrome Browser.</li>
+		<li>Clicking on the button in the ‘Basis’ column links to the reaction in Table S1 on which the Reaction Rule is based.</li>
         <li>The subscripts near atoms describe the context of the atom. The letters indicate the following:
             <ul>
                 <li>W = Wildcard (any context)</li>
